Implemented login function, JWT authentication and protected routes
