# src/controllers/auth.controller.js
@@ -1,5 +1,6 @@
 import bcrypt from "bcryptjs";
 import { findUserByEmail, createUser } from "../models/user.model.js";
+import jwt from "jsonwebtoken"; //added JWT
 
 export const signup = async (req, res) => {
   try {
@@ -41,5 +42,43 @@ export const signup = async (req, res) => {
       message: "Internal server error",
       error: process.env.NODE_ENV === "development" ? error.message : undefined, // Show error in dev
     });
+  }
+};
+
+export const login = async (req, res) => {
+  try{
+    const { email, password } = req.body;
+
+    const user = await findUserByEmail(email);
+    if (!user) {
+      return res.status(400).json({ message: "email atau password salah oi" });
+    }
+    const isPasswordValid = await bcrypt.compare(password, user.password);
+    if (!isPasswordValid) {
+      return res.status(400).json({ success: false, message: "email atau password salah oi" });
+    }
+
+    //Create JWT
+    const token = jwt.sign(
+      { id: user.id, email: user.email },
+      process.env.JWT_SECRET,
+      { expiresIn: "1h" }
+    );
+
+    //return token
+    res.status(200).json({ success: true, message: "Login successful", 
+      token, 
+      user: { 
+        id: user.id, 
+        email: user.email, 
+        firstName: user.firstName,
+        lastName: user.lastName 
+        }
+    });
+  }
+
+  catch(error){
+    console.error("Login error:", error); // Login detail error log
+    res.status(500).json({ message: "Internal server error" });
   }
 };
